--- a/tutorials/spde/spde-tutorial.bib
+++ b/tutorials/spde/spde-tutorial.bib
@@ -46,7 +46,7 @@ Correlation Functions},
   author = 	 {Lindgren, F. and Rue, H. and Lindstr\"om, J.},
   title = 	 {An explicit link between Gaussian fields and
 Gaussian Markov random fields: the stochastic
-partial differential equation approach},
+partial differential equation approach (with discussion)},
   journal = 	 {J. R. Statist. Soc. B},
   year = 	 {2011},
   volume = 	 {73},
@@ -209,3 +209,30 @@ models using integrated nested Laplace approximation (INLA)},
   OPTannote = 	 {}
 }
 
+
+@article{cardenasKR:2012,
+title = "Direct fitting of dynamic models using integrated nested Laplace approximations — \{INLA\} ",
+journal = "Computational Statistics \& Data Analysis ",
+volume = "56",
+number = "6",
+pages = "1808 - 1828",
+year = "2012",
+note = "",
+issn = "0167-9473",
+doi = "http://dx.doi.org/10.1016/j.csda.2011.10.024",
+url = "http://www.sciencedirect.com/science/article/pii/S0167947311003999",
+author = "Ramiro Ruiz-C{\'a}rdenas and Elias T. Krainski and H{\aa}vard Rue",
+keywords = "Approximate Bayesian inference",
+keywords = "State-space models",
+keywords = "Laplace approximation",
+keywords = "Augmented model",
+keywords = "Spatio-temporal dynamic models"
+}
+
+ @Manual{deldir,
+    title = {deldir: Delaunay Triangulation and Dirichlet (Voronoi) Tessellation.},
+    author = {Rolf Turner},
+    year = {2014},
+    note = {R package version 0.1-5},
+    url = {http://CRAN.R-project.org/package=deldir},
+  }
