--- a/tutorials/spde/updates.tex
+++ b/tutorials/spde/updates.tex
@@ -1,4 +1,5 @@
 \begin{verbatim}
+2014 March 10: fix log-Cox example, add covariate
 2013 December 21: 
  * fix several missprints
  * add details on: likelihood, semicontinuous and spacetime examples 
