Added the experimental-note for option cross.

--- a/r-inla.org/doc/hyper/likelihood/poisson.tex
+++ b/r-inla.org/doc/hyper/likelihood/poisson.tex
@@ -4,6 +4,6 @@
 	\item[hyper]\ 
 	\item[survival] FALSE
 	\item[discrete] TRUE
-	\item[link] default log logoffset test1 special1
+	\item[link] default log logoffset test1 special1 special2
 	\item[pdf] poisson
 \end{description}
