--- a/r-inla.org/doc/hyper/latent/sigm.tex
+++ b/r-inla.org/doc/hyper/latent/sigm.tex
@@ -45,5 +45,6 @@
 	\item[n.div.by] 
 	\item[n.required] FALSE
 	\item[set.default.values] FALSE
+	\item[status] experimental
 	\item[pdf] sigm
 \end{description}
