--- a/r-inla.org/doc/hyper/prior/pc.tex
+++ b/r-inla.org/doc/hyper/prior/pc.tex
@@ -2,5 +2,5 @@
 %% This file is generated automatically from models.R
 \begin{description}
 	\item[nparameters] 2
-	\item[pdf] 
+	\item[pdf] NA
 \end{description}
