--- a/r-inla.org/doc/hyper/likelihood/zeroninflatedbinomial2.tex
+++ b/r-inla.org/doc/hyper/likelihood/zeroninflatedbinomial2.tex
@@ -29,5 +29,5 @@
 	\item[survival] FALSE
 	\item[discrete] FALSE
 	\item[link] default logit probit cloglog
-	\item[pdf] add-file-here
+	\item[pdf] NA
 \end{description}
