--- a/r-inla.org/doc/hyper/link/special1.tex
+++ b/r-inla.org/doc/hyper/link/special1.tex
@@ -125,5 +125,5 @@
 	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 \end{description}
-	\item[pdf] 
+	\item[pdf] NA
 \end{description}
