--- a/r-inla.org/doc/hyper/link/test1.tex
+++ b/r-inla.org/doc/hyper/link/test1.tex
@@ -15,5 +15,5 @@
 	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 \end{description}
-	\item[pdf] 
+	\item[pdf] NA
 \end{description}
