--- a/tutorials/inla/inla/newStart/master.tex
+++ b/tutorials/inla/inla/newStart/master.tex
@@ -15,7 +15,7 @@
 \usepackage{color}
 \usepackage{subfig}                   % hvis du vil kunne ha flere figurer inni en figur
 \usepackage{listings}                 % Fin for inkludering av kildekode
-\usepackage{hyperref}                	% Lager hyperlinker i evt. pdf-dokument, men har noen bugs, den er kommentert bort her.
+\usepackage{hyperref}                   % Lager hyperlinker i evt. pdf-dokument, men har noen bugs, den er kommentert bort her.
 \usepackage{natbib}
 \usepackage{my-showkeys}
 \usepackage{alltt}
@@ -31,7 +31,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%% Paper settings %%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%
-\parindent 0pt 												% Paragraph indenting
+\parindent 0pt                                                                                          % Paragraph indenting
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -106,7 +106,7 @@
 
 \begin{document}
 \title{A tutorial for \tv{R-INLA}}
-\author{H. Rue \& T.\ G.\ Martins \& A. Riebler\\
+\author{A.\ Riebler \& T.\ G.\ Martins \& H.\ Rue\\
  Department of Mathematical Sciences\\
  Norwegian University of Science and Technology\\
  N-7491 Trondheim, Norway}
@@ -133,7 +133,7 @@
 
 %\nocite{*}
 \bibliographystyle{dcuurl}
-\bibliography{mybib, thiago}
+\bibliography{mybib,localbib,thiago}
 \addcontentsline{toc}{chapter}{Bibliography}
 
 
